--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,8 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            curl -s https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -o ./miniconda.sh
-            bash ./miniconda.sh -b -p /miniconda
+            curl -s https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -o miniconda.sh
+            bash miniconda.sh -b -p miniconda
 
             export PATH=`pwd`/miniconda/bin:$PATH
 
