--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,25 +16,29 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            curl -s https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -o miniconda.sh
-            bash miniconda.sh -b -p miniconda
+            if [ ! -d minicond ]; then
+              curl -s https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -o miniconda.sh
+              bash miniconda.sh -b -p miniconda
+
+              export PATH=`pwd`/miniconda/bin:$PATH
+
+              conda config --set always_yes yes --set changeps1 no
+              conda config --add channels defaults
+              conda config --add channels conda-forge
+              conda update -q conda
+
+              conda create -q -n test-env \
+                python=3.6 \
+                pip \
+                numpy \
+                ngmix \
+                galsim \
+                flake8 \
+                pytest
+            fi
 
             export PATH=`pwd`/miniconda/bin:$PATH
-
-            conda config --set always_yes yes --set changeps1 no
-            conda config --add channels defaults
-            conda config --add channels conda-forge
-            conda update -q conda
-
-            conda create -q -n test-env \
-              python=3.6 \
-              pip \
-              numpy \
-              ngmix \
-              galsim \
-              flake8 \
-              pytest
-
+            source activate test-env
             pip install -e .
 
       - save_cache:
