--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            if [ ! -d minicond ]; then
+            if [ ! -d miniconda ]; then
               curl -s https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -o miniconda.sh
               bash miniconda.sh -b -p miniconda
 
