--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,7 @@ jobs:
             source activate test-env
 
             conda install -y \
+              nomkl \
               numpy \
               ngmix \
               galsim \
