--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,8 +32,14 @@ jobs:
                 pip
             fi
 
-            cat ~/.condarc
             export PATH=`pwd`/miniconda/bin:$PATH
+
+            conda config --set always_yes yes --set changeps1 no
+            conda config --add channels defaults
+            conda config --add channels conda-forge
+            conda update -q conda
+            cat ~/.condarc
+
             source activate test-env
 
             conda install -y \
