--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
           command: |
             export PATH=`pwd`/miniconda/bin:$PATH
             source activate test-env
-            flake8 mdetsims
+            flake8 --exclude=mdetsims/dbsim/erins_code/* mdetsims
 
       - run:
           name: test
