--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,8 @@ jobs:
               fitsio \
               joblib \
               tqdm \
-              scikit-learn
+              scikit-learn \
+              esutil
             conda update --all -y -q
 
             pip install -e .
