--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,8 @@ jobs:
               scikit-learn \
               esutil
             conda update --all -y -q
+            pip install git+https://github.com/esheldon/metadetect.git \
+              --force-reinstall --no-deps --no-cache-dir
 
             pip install -e .
 
