--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,6 +57,8 @@ jobs:
             conda update --all -y -q
             pip install git+https://github.com/esheldon/metadetect.git \
               --force-reinstall --no-deps --no-cache-dir
+            pip install git+https://github.com/esheldon/mof.git \
+              --force-reinstall --no-deps --no-cache-dir
 
             pip install -e .
 
