--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,8 +51,14 @@ jobs:
               fitsio \
               joblib \
               tqdm \
-              scikit-learn
+              scikit-learn \
+              esutil \
+              meds
             conda update --all -y -q
+            pip install git+https://github.com/esheldon/metadetect.git \
+              --force-reinstall --no-deps --no-cache-dir
+            pip install git+https://github.com/esheldon/mof.git \
+              --force-reinstall --no-deps --no-cache-dir
 
             pip install -e .
 
