--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ jobs:
           command: |
             export PATH=`pwd`/miniconda/bin:$PATH
             source activate test-env
-            if [[ `grep "$(printf '\t')" pyccl/*.py` != "" ]]; then
+            if [[ `grep "$(printf '\t')" mdetsims/**/*.py` != "" ]]; then
               exit 1
             fi            
             flake8 --exclude=mdetsims/dbsim/erins_code/* mdetsims
