--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
           name: install dependencies
           command: |
             if [ ! -d miniconda ]; then
-              curl -s https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -o miniconda.sh
+              curl -sL https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -o miniconda.sh
               bash miniconda.sh -b -p miniconda
 
               export PATH=`pwd`/miniconda/bin:$PATH
@@ -28,7 +28,7 @@ jobs:
               conda update -q conda
 
               conda create -q -n test-env \
-                python=3.6 \
+                python=3.8 \
                 pip
             fi
 
