--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
             pip \
             nomkl \
             numpy \
-            ngmix \
+            "ngmix<2" \
             galsim \
             flake8 \
             pytest \
