--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,10 +41,9 @@ jobs:
             esutil \
             meds \
             pylbfgs \
-            lsstdesc-weaklensingdeblending
+            lsstdesc-weaklensingdeblending \
+            "metadetect==0.3.9"
 
-          pip install git+https://github.com/esheldon/metadetect.git \
-            --force-reinstall --no-deps --no-cache-dir
           pip install git+https://github.com/esheldon/mof.git \
             --force-reinstall --no-deps --no-cache-dir
 
